# Projects

./: README.md
DMPs & PI2/: dE_spring.m  dE_spring3D.m  dmp.m  dmp3D  dmp3D.m  dmp_pp_test.m  exponential_fcn.m  rbfn_fit.m  rbfn_predict.m  readme.md  test.m  test3Dnew.m  test_3D.m  traj_3D.m  trajectory_3D.txt
DMPs & PI2/images/: dmp_mollifier_rbf.fig
DQN/: DQN0.m  Euler.m  cartpole_simulation.m  dyn_equation.m  readme.md  sim2_Qnet.m  sim3_Qnet.m  sim_cartpole.m  test.m  test_sim.m
HDR-Depth-Imaging/: README.md  VideotoHDRvideo_2f.py  dispMapProcessing.cpp  distanceCalc.cpp
Interactive ML/: README.md  demo_anomaly.kv  digit_demo_anomaly.py
Robot Control/: readme.md
Robot Control/Controller_Comparison/: readMe.txt
Robot Control/Controller_Comparison/src/ursa_apps/: CMakeLists.txt  README.txt  package.xml
Robot Control/Controller_Comparison/src/ursa_apps/launch/: bringUR10.launch  bringUR5.launch
Robot Control/Controller_Comparison/src/ursa_apps/launch/configs/: jointStates.yaml  robot_ur5.rviz
Robot Control/Controller_Comparison/src/ursa_apps/launch/configs/robot/: robotConfig_K.ini  ur10_robot.urdf.xacro  ur10_zeros.yaml  ur5_zeros.yaml
StrawAlert/: ArrayAdapterPatientView.java  LoginActivity.java  MainActivity.java  OnSwipeTouchListener.java  PatientRegistrationActivity.java  PatientViewActivity.java  UserRegistrationActivity.java  readme.md
StrawAlert/FragmentLists/: ArrayAdapterListType.java  FragmentListAll.java  FragmentListOpen.java  FragmentListRed.java  SubFragmentListAll.java  SubFragmentListOpen.java  (+1 more)
TAMP using LfD & RL/: readme.md
(+42 files in other folders)
