<package>
  <name>ursa_apps</name>
  <version>0.0.0</version>
  <description>Apps for UR robot in stand alone configuration</description>
  <author email="florian.bergner@tum.de">Florian Bergner</author>
  <author email="dean@tum.de">Emmanuel Dean</author>
  <maintainer email="florian.bergner@tum.de">Florian Bergner</maintainer>
  <maintainer email="dean@tum.de">Emmanuel Dean</maintainer>
  <url type="website">http://ics.ei.tum.de</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ur_description</run_depend>

</package>
